--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-skeleton-content",
+  "name": "@mtourj/react-native-skeleton-content",
   "version": "1.0.25",
   "description": "A simple and fully customizable React Native component that implements a skeleton-like loader",
   "main": "lib/index.js",
@@ -20,7 +20,6 @@
     "format": "prettier --write src/**/*.{js,jsx,ts,tsx}",
     "lint": "eslint --fix src/**/*.{js,jsx,ts,tsx}",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
@@ -51,14 +50,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexZajac/react-native-skeleton-content.git"
+    "url": "git+https://github.com/mtourj/react-native-skeleton-content.git"
   },
   "author": "Alexandre Zajac",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/alexZajac/react-native-skeleton-content/issues"
+    "url": "https://github.com/mtourj/react-native-skeleton-content/issues"
   },
-  "homepage": "https://github.com/alexZajac/react-native-skeleton-content#readme",
+  "homepage": "https://github.com/mtourj/react-native-skeleton-content#readme",
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.1",
     "@types/jest": "^24.0.18",
