--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mtourj/react-native-skeleton-content",
-  "version": "1.0.26",
+  "version": "1.0.28",
   "description": "A simple and fully customizable React Native component that implements a skeleton-like loader",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -75,14 +75,13 @@
     "react": "^16.10.2",
     "react-native": "^0.62.2",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "^2.2.3",
     "react-native-unimodules": "^0.7.0-rc.1",
     "react-test-renderer": "^16.13.1",
     "typescript": "4.4.4"
   },
   "dependencies": {
-    "react-native-redash": "^16.0.11",
     "expo-linear-gradient": "~11.0.3",
-    "react-native-reanimated": "~2.2.0"
+    "react-native-redash": "^16.0.11"
   }
 }
